--- a/netlify.toml
+++ b/netlify.toml
@@ -43,12 +43,23 @@
             "upgrade-insecure-requests; block-all-mixed-content;",
             "report-uri https://farrelf.report-uri.com/r/d/csp/enforce"
         ]
-        Expect-CT = "max-age=604800, enforce, report-uri="https://farrelf.report-uri.com/r/d/ct/enforce""
+        Expect-CT = "max-age=604800, enforce, report-uri=\"https://farrelf.report-uri.com/r/d/ct/enforce\""
         Feature-Policy = "camera https://*.disqus.com https://*.disquscdn.com; autoplay 'none'; usb 'none'; unsized-media 'none'"
-        NEL = "{"report_to":"default","max_age":31536000,"include_subdomains":true}"
+        NEL = '''{
+            "report_to": "default",
+            "max_age": 31536000,
+            "include_subdomains": true
+        }'''
         Permissions-Policy = "gyroscope=(), microphone=(https://farrelf-blog.disqus.com https://*.disquscdn.com), vibrate=(), magnetometer=(), camera=(https://farrelf-blog.disqus.com https://*.disquscdn.com), midi=()"
         Referrer-Policy = "strict-origin-when-cross-origin"
-        Report-To = "{"group":"default","max_age":31536000,"endpoints":[{"url":"https://farrelf.report-uri.com/a/d/g"}],"include_subdomains":true}"
+        Report-To = '''{
+            "group": "default",
+            "max_age": 31536000,
+            "endpoints":[
+                { "url": "https://farrelf.report-uri.com/a/d/g"}
+            ],
+            "include_subdomains": true
+        }'''
         Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
         X-Content-Type-Options = "nosniff"
         X-Frame-Options = "SAMEORIGIN"
