--- a/netlify.toml
+++ b/netlify.toml
@@ -35,6 +35,14 @@
 
     [headers.values]
         Cache-Control = "public, max-age=360, s-maxage=360, must-revalidate"
+        Report-To = '''{
+            "group": "default",
+            "max_age": 31536000,
+            "endpoints":[
+                {"url": "https://farrelf.report-uri.com/a/d/g"}
+            ],
+            "include_subdomains": true
+        }'''
         Content-Security-Policy = '''
         img-src 'self' data: https://*.cloudfront.net https://cdn.statically.io https://cdn.jsdelivr.net https://*.gstatic.com https://*.disquscdn.com https://*.google.com https://*.disqus.com;
         font-src data: 'self' https://cdn.jsdelivr.net https://cdn.statically.io https://fonts.gstatic.com;
@@ -43,8 +51,8 @@
         object-src 'self'; 
         frame-ancestors 'self';
         upgrade-insecure-requests; block-all-mixed-content;
-        report-uri https://farrelf.report-uri.com/r/d/csp/enforce
-        report-to report-uri;'''
+        report-uri https://farrelf.report-uri.com/r/d/csp/enforce;
+        report-to default;'''
         Expect-CT = "max-age=604800, enforce, report-uri=\"https://farrelf.report-uri.com/r/d/ct/enforce\""
         Feature-Policy = "camera https://*.disqus.com https://*.disquscdn.com; autoplay 'none'; usb 'none'; unsized-media 'none'"
         NEL = '''{
@@ -54,14 +62,6 @@
         }'''
         Permissions-Policy = "gyroscope=(), microphone=(https://farrelf-blog.disqus.com https://*.disquscdn.com), vibrate=(), magnetometer=(), camera=(https://farrelf-blog.disqus.com https://*.disquscdn.com), midi=()"
         Referrer-Policy = "strict-origin-when-cross-origin"
-        Report-To = '''{
-            "group": "default",
-            "max_age": 31536000,
-            "endpoints":[
-                {"url": "https://farrelf.report-uri.com/a/d/g"}
-            ],
-            "include_subdomains": true
-        }'''
         Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
         X-Content-Type-Options = "nosniff"
         X-Frame-Options = "SAMEORIGIN"
