chore: Trying to Optimize Twemoji
Plus:
- Changes some `README.md`
- Implement Base URL, Path and File Extension Configuration for Twemoji
- Trying to add Emoji Support Callback if not using Twemoji
- Remove `crossorigin="anonymous"` when not using any External CDN or the Hugo Started in Development Environment
- Ignore some files for GitHub Actions CI/CD
- Fix Indent Spaces in `data/external.yaml` and `config.yaml`

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,6 +3,13 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - "**/README.md"
+      - "**/LICENSE"
+      - "**/LICENSE*"
+      - "**/CONTRIBUTING.md"
+      - "**/.gitignore"
+      - "**/netlify.toml"
 
 jobs:
   build:
