--- a/netlify.toml
+++ b/netlify.toml
@@ -16,10 +16,10 @@
         HUGO_ENV = "production"
 
 [context.deploy-preview]
-    command = "hugo --gc --minify --enableGitInfo --buildFuture -b ${DEPLOY_PRIME_URL}"
+    command = "hugo --gc --minify --enableGitInfo --config config.preview.yaml --buildFuture -b ${DEPLOY_PRIME_URL}"
 
 [context.branch-deploy]
-    command = "hugo --gc --minify -b ${DEPLOY_PRIME_URL}"
+    command = "hugo --gc --minify --config config.preview.yaml -b ${DEPLOY_PRIME_URL}"
 
 [context.next.environment]
     HUGO_ENABLEGITINFO = "true"
