Draft Article Update
Plus:
- Add GitHub Actions Build Cache for Preview Workflows
- Using `git ls-tree` as GitHub Actions Cache Keys
- Add `robots.txt` file for Deploy Preview site
- Change Netlify Build Command and add `HUGO_ENV`` for Deploy Preview and Branch Deploy

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -61,6 +61,7 @@ jobs:
         chmod +x hugo
         sudo mv hugo /usr/local/bin/ && sudo chown root:root /usr/local/bin/hugo
         which hugo && hugo version
+        git ls-tree -rtl HEAD:content/post --full-tree > /tmp/post-tree.hash
     
     - name: Set up Hugo Resources Cache
       uses: actions/cache@v2
@@ -68,12 +69,15 @@ jobs:
         path: |
           ./cache
           ./resources
-        key: v1-hugo-${{ hashFiles('**/config.yaml') }}-${{ hashFiles('**/.gitmodules') }}
+        key: v1-hugo-${{ hashFiles('/tmp/post-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
         restore-keys: | 
-          v1-hugo-${{ hashFiles('**/config.yaml') }}-
+          - v1-hugo-${{ hashFiles('/tmp/post-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
+          - v1-hugo-${{ hashFiles('/tmp/post-tree.hash') }}-
+
 
     - name: Building the Blog HTML
       run: |
+        rm static/robots_preview
         hugo --minify --enableGitinfo --cacheDir ${PWD}/cache
         tar cvf - ./public | pigz -9 > files.tar.gz
 
