--- a/netlify.toml
+++ b/netlify.toml
@@ -6,20 +6,24 @@
     TZ = "Asia/Jakarta"
 
 [context.production]
-    command = "hugo --minify --enableGitInfo"
+    command = "rm static/robots_preview; hugo --minify --enableGitInfo"
     [context.production.environment]
         HUGO_ENV = "production"
 
 [context.split1]
-    command = "hugo --minify --enableGitInfo"
+    command = "rm static/robots_preview; hugo --minify --enableGitInfo"
     [context.split1.environment]
         HUGO_ENV = "production"
 
 [context.deploy-preview]
-    command = "hugo --gc --minify --enableGitInfo --config config.preview.yaml --buildFuture -b ${DEPLOY_PRIME_URL}"
+    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify --enableGitInfo --config config.preview.yaml --buildFuture -b ${DEPLOY_PRIME_URL}"
+    [context.deploy-preview.environment]
+        HUGO_ENV = "staging"
 
 [context.branch-deploy]
-    command = "hugo --gc --minify --config config.preview.yaml -b ${DEPLOY_PRIME_URL}"
+    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify --config config.preview.yaml -b ${DEPLOY_PRIME_URL}"
+    [context.branch-deploy.environment]
+        HUGO_ENV = "staging"
 
 [context.next.environment]
     HUGO_ENABLEGITINFO = "true"
