Fixing Preview Blog Styles
Plus:
- Hugo Theme Update to CaiJimmy/hugo-theme-stack@3e8490d
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/96db925...3e8490d
- Made some changes due Theme Update`

--- a/netlify.toml
+++ b/netlify.toml
@@ -49,7 +49,7 @@
         }'''
         Content-Security-Policy = '''
         img-src 'self' data: https://*.cloudfront.net https://cdn.statically.io https://cdn.jsdelivr.net https://*.gstatic.com https://*.disquscdn.com https://*.google.com https://*.disqus.com;
-        font-src data: 'self' https://cdn.jsdelivr.net https://cdn.statically.io https://fonts.gstatic.com;
+        font-src data: 'self' https://cdn.jsdelivr.net https://cdn.statically.io https://*.cloudfront.net https://fonts.gstatic.com;
         connect-src 'self'; 
         frame-src 'self' https://disqus.com https://*.disqus.com;
         object-src 'self'; 
