--- a/config.yaml
+++ b/config.yaml
@@ -41,7 +41,7 @@ params:
     CSS:
       URL: https://cdn.statically.io/css/farrel.franqois.id
     Fonts:
-      URL: https://cdn.jsdelivr.net/gh/FarrelF/Blog@84de92d60ca1c6f04388def876eb040f1bda1acf/static/fonts
+      URL: https://cdn.statically.io/gh/FarrelF/Blog@84de92d/static/fonts
 
   mainSections:
     - post
