page(add): Buku Tamu (Guestbook)
Plus:
- Changes/Update in Terms and Policies Page
- Updates on "Migrasi Blog ke Hugo, Alasan dan Rencana Kedepan nya" article
- Disable Site Comments for All Pages, except for Guestbook ("Buku Tamu") Page
- Add `messages.svg` as Guestbook Menu Icon
- Changing a way for including Polyfill.io
- Changing `cache-control` header for Blog Site

--- a/data/external.yaml
+++ b/data/external.yaml
@@ -41,6 +41,6 @@ Twemoji:
     type: script
     defer: true
 
-Polyfill:
+Polyfill-IntersectionObserver:
   - src: https://cdn.polyfill.io/v3/polyfill.min.js?features=IntersectionObserver%2CIntersectionObserverEntry
     type: script
