--- a/netlify.toml
+++ b/netlify.toml
@@ -79,3 +79,101 @@
         X-Frame-Options = "SAMEORIGIN"
         X-UA-Compatible = "IE=edge"
         X-XSS-Protection = "0"
+
+[[headers]]
+    for = "/*/style.min.*.css"
+
+    [headers.values]
+        Cache-Control = "public, max-age=31536000, immutable"
+        Access-Control-Allow-Origin = "*"
+        Access-Control-Expose-Headers = "*"
+        Timing-Allow-Origin = "*"
+        Report-To = '''{
+            "group": "default",
+            "max_age": 31536000,
+            "endpoints":[
+                {"url": "https://farrelf.report-uri.com/a/d/g"}
+            ],
+            "include_subdomains": true
+        }'''
+        Content-Security-Policy = '''
+        img-src 'self' data: https://*.cloudfront.net https://cdn.statically.io https://cdn.jsdelivr.net https://*.gstatic.com https://*.disquscdn.com https://*.google.com https://*.disqus.com;
+        font-src data: 'self' https://cdn.jsdelivr.net https://cdn.statically.io https://*.cloudfront.net https://fonts.gstatic.com;
+        connect-src 'self'; 
+        frame-src 'self' https://disqus.com https://*.disqus.com;
+        object-src 'self'; 
+        frame-ancestors 'self';
+        upgrade-insecure-requests; block-all-mixed-content;
+        report-uri https://farrelf.report-uri.com/r/d/csp/enforce;
+        report-to default;'''
+        Expect-CT = "max-age=604800, enforce, report-uri=\"https://farrelf.report-uri.com/r/d/ct/enforce\""
+        Feature-Policy = "camera https://*.disqus.com https://*.disquscdn.com; autoplay 'none'; usb 'none'; gyroscope 'none'; vibrate 'none'; midi 'none'"
+        NEL = '''{
+            "report_to": "default",
+            "max_age": 31536000,
+            "include_subdomains": true
+        }'''
+        Permissions-Policy = '''
+        gyroscope=(), 
+        usb=(), 
+        autoplay=(), 
+        microphone=("https://farrelf-blog.disqus.com" "https://*.disquscdn.com"), 
+        vibrate=(), 
+        magnetometer=(), 
+        camera=("https://farrelf-blog.disqus.com" "https://*.disquscdn.com"), 
+        midi=()'''
+        Referrer-Policy = "strict-origin-when-cross-origin"
+        Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+        X-Content-Type-Options = "nosniff"
+        X-Frame-Options = "SAMEORIGIN"
+        X-UA-Compatible = "IE=edge"
+        X-XSS-Protection = "0"
+
+[[headers]]
+    for = "/*/main.min.*.js"
+
+    [headers.values]
+        Cache-Control = "public, max-age=31536000, immutable"
+        Access-Control-Allow-Origin = "*"
+        Access-Control-Expose-Headers = "*"
+        Timing-Allow-Origin = "*"
+        Report-To = '''{
+            "group": "default",
+            "max_age": 31536000,
+            "endpoints":[
+                {"url": "https://farrelf.report-uri.com/a/d/g"}
+            ],
+            "include_subdomains": true
+        }'''
+        Content-Security-Policy = '''
+        img-src 'self' data: https://*.cloudfront.net https://cdn.statically.io https://cdn.jsdelivr.net https://*.gstatic.com https://*.disquscdn.com https://*.google.com https://*.disqus.com;
+        font-src data: 'self' https://cdn.jsdelivr.net https://cdn.statically.io https://*.cloudfront.net https://fonts.gstatic.com;
+        connect-src 'self'; 
+        frame-src 'self' https://disqus.com https://*.disqus.com;
+        object-src 'self'; 
+        frame-ancestors 'self';
+        upgrade-insecure-requests; block-all-mixed-content;
+        report-uri https://farrelf.report-uri.com/r/d/csp/enforce;
+        report-to default;'''
+        Expect-CT = "max-age=604800, enforce, report-uri=\"https://farrelf.report-uri.com/r/d/ct/enforce\""
+        Feature-Policy = "camera https://*.disqus.com https://*.disquscdn.com; autoplay 'none'; usb 'none'; gyroscope 'none'; vibrate 'none'; midi 'none'"
+        NEL = '''{
+            "report_to": "default",
+            "max_age": 31536000,
+            "include_subdomains": true
+        }'''
+        Permissions-Policy = '''
+        gyroscope=(), 
+        usb=(), 
+        autoplay=(), 
+        microphone=("https://farrelf-blog.disqus.com" "https://*.disquscdn.com"), 
+        vibrate=(), 
+        magnetometer=(), 
+        camera=("https://farrelf-blog.disqus.com" "https://*.disquscdn.com"), 
+        midi=()'''
+        Referrer-Policy = "strict-origin-when-cross-origin"
+        Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+        X-Content-Type-Options = "nosniff"
+        X-Frame-Options = "SAMEORIGIN"
+        X-UA-Compatible = "IE=edge"
+        X-XSS-Protection = "0"
