--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -74,7 +74,6 @@ jobs:
           - v1-hugo-${{ hashFiles('/tmp/post-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
           - v1-hugo-${{ hashFiles('/tmp/post-tree.hash') }}-
 
-
     - name: Building the Blog HTML
       run: |
         rm static/robots_preview
@@ -98,11 +97,22 @@ jobs:
       with:
         name: site-outputs
 
-    - name: Decompressing Files and Installing Rclone
+    - name: Decompressing Files and Installing lftp
       run: |
         tar -xvzf files.tar.gz
-        curl https://rclone.org/install.sh | sudo bash
+        sudo -- sh -c 'apt update; apt install -y lftp'
     
-    - name: Deploying with Rclone
+    - name: Deploying with lftp and Purging Bunny.net Pullzone Cache
+      env:
+        FTP_USER: ${{ secrets.BUNNY_STORAGE_USERNAME }}
+        FTP_PASS: ${{ secrets.BUNNY_STORAGE_PASSWORD }}
+        BUNNY_PULLZONE_ID: ${{ secrets.BUNNY_PULLZONE_ID }}
+        BUNNY_API_KEY: ${{ secrets.BUNNY_API_KEY }}
       run: |
-        echo "Run a Command Here"
+        lftp -e "open storage.bunnycdn.com; user ${FTP_USER} ${FTP_PASS}; mirror -R --parallel=10 --verbose --delete-first ./public /${FTP_USER}; bye"
+        RESPONSE_CODE=$(curl -so /dev/null -I -w "%{http_code}" -X POST -H "content-length: 0" -H "Content-Type: application/json" -H "Accept: application/json" -H "AccessKey: ${BUNNY_API_KEY}" 'https://api.bunny.net/pullzone/${BUNNY_PULLZONE_ID}/purgeCache' | head -n 1 | cut -d$' ' -f2)
+        if [ "${RESPONSE_CODE}" -gt 299 ]; then
+          echo "Failed to sending purge request, purge it by yourself!"
+        else
+          echo "Sending Purge Request is Successfully, the CDN Cache will be purged soon!"
+        fi
