--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy
 on: 
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - "**/README.md"
       - "**/LICENSE"
