--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches:
       - drafts
-      - master
+      - main
     paths-ignore:
       - "**/README.md"
       - "**/LICENSE"
