--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -67,7 +67,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: |
-          ./cache
+          /tmp/hugo_cache
           ./resources
         key: v1-hugo-${{ hashFiles('/tmp/post-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
         restore-keys: | 
@@ -77,7 +77,7 @@ jobs:
     - name: Building the Blog HTML
       run: |
         rm static/robots_preview
-        hugo --minify --enableGitinfo --cacheDir "${PWD}/cache"
+        hugo --minify --enableGitinfo
         tar cvf - ./public | pigz -9 > files.tar.gz
 
     - name: Upload Output File to Artifact
