ci: Showing Purge Cache Response Code
Plus:
Replace Netlify Status Badge with GitHub Actions Status Badge in `README.md`

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -116,3 +116,4 @@ jobs:
         else
           echo "Sending Purge Request is Successfully, the CDN Cache will be purged soon!"
         fi
+        echo "${RESPONSE_CODE}"
