--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -118,3 +118,4 @@ jobs:
         else
           echo "Sending Purge Request is Successfully, the CDN Cache will be purged soon!"
         fi
+        echo "${RESPONSE_CODE}"
