Draft Article Update and Optimize Image Resizing
- Draft Article: "Apa itu Cloudflare? Perlukah untuk menggunakan nya?" Update
- Feature: Optimizing Featured Image Resizing behaviour if the image width are under 1600px
- Using `sha384` instead `md5` for fingerprinting related content images
- CI: Change Cache Key for GitHub Actions
- Change a way to Configure Twemoji
- Update External Libraries and SRI Hashes
- Theme: Hugo Theme Update to CaiJimmy/hugo-theme-stack@7dab67b
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/3e8490da...7dab67b

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -62,6 +62,7 @@ jobs:
         cd ${GITHUB_WORKSPACE}
         which hugo && hugo version
         git ls-tree -rtl HEAD:content/post --full-tree > post-tree.hash
+        git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
 
     - name: Set up Hugo Resources Cache
       uses: actions/cache@v2
@@ -69,10 +70,10 @@ jobs:
         path: |
           ./cache
           ./resources
-        key: v1-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
+        key: v1-1-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
         restore-keys: | 
-          - v1-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
-          - v1-hugo-${{ hashFiles('**/post-tree.hash') }}-
+          - v1-1-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
+          - v1-1-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/layouts-tree.hash') }}-
 
     - name: Building the Blog HTML
       run: |
