--- a/config.preview.yaml
+++ b/config.preview.yaml
@@ -83,9 +83,10 @@ params:
 
   Twemoji:
     enabled: true
-    BaseURL: https://cdn.jsdelivr.net/gh/twitter/twemoji@13.0.1/
-    Path: assets/svg
-    Ext: .svg
+    Options:
+      baseURL: https://cdn.jsdelivr.net/gh/twitter/twemoji@13.0.2/
+      Path: assets/svg
+      Ext: .svg
 
 menu:
   main:
