--- a/config.yaml
+++ b/config.yaml
@@ -66,10 +66,13 @@ params:
       - search
       - archives
       - tag-cloud
+      - categories
     archives:
       limit: 5
     tagCloud:
       limit: 10
+    categoriesCloud:
+      limit: 20
 
   opengraph:
     twitter:
