Ready to Publish Article and Changing CDN URLs

--- a/config.yaml
+++ b/config.yaml
@@ -35,13 +35,13 @@ params:
 
   CDN:
     Images:
-      URL: https://cdn.statically.io/img/farrel.franqois.id/f=auto
+      URL: https://cdn.statically.io/img/static.farrel.franqois.id/f=auto
     JS:
-      URL: https://cdn.statically.io/js/farrel.franqois.id
+      URL: https://cdn.statically.io/js/static.farrel.franqois.id
     CSS:
-      URL: https://cdn.statically.io/css/farrel.franqois.id
+      URL: https://cdn.statically.io/css/static.farrel.franqois.id
     Fonts:
-      URL: https://cdn.statically.io/gh/FarrelF/Blog@84de92d/static/fonts
+      URL: https://cdn.statically.io/gh/FarrelF/Blog/8586e96/static/fonts
 
   mainSections:
     - post
