Article and Taxonomies URL/Permalink Update
- Article: "Cara menghemat Konsumsi Bandwidth Server" update
- Adding Archetypes
- Content: Adding Index file for Categories and Tags Page List
- Changing Categories and Tags Page List URL
- i18n(id): Add Category Taxonomy String
- Theme: Implement a new i18n string in `layouts/_default/archives.html`
- Config: Changing Tags Permalink

--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,7 @@ disqusShortname: farrelf-blog
 permalinks:
   post: /:slug/
   page: /:slug/
+  tags: /tag/:slug/
   categories: /kategori/:slug/
 
 params:
